--- a/reverse/style/main.scss
+++ b/reverse/style/main.scss
@@ -13,7 +13,7 @@ $text-color: #776e65;
 $bright-text-color: #f9f6f2;
 
 $tile-color: #eee4da;
-$tile-gold-color: #edc22e;
+$tile-gold-color: #000;
 $tile-gold-glow-color: lighten($tile-gold-color, 15%);
 
 $game-container-margin-top: 40px;
