Added instruction page

--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,19 @@ a {
           transform: scale(1.01);
 }
 
+/* =-=-=- CHANGES BY AALIYA  -=-=-= */
+
+.landing .howTo{
+  width: 70px;
+  height: 55px;
+  position: absolute;
+  bottom: 75px;
+  left: 12px;
+  line-height: 59px;
+}
+
+/* =-=-=- CHANGES BY AALIYA  -=-=-= */
+
 .landing .footer {
   height: 60px;
   line-height: 60px;
@@ -129,6 +142,36 @@ a {
   line-height: 60px;
   font-size: 2.5rem;
 }
+
+/* =-=-=- CHANGES BY AALIYA  -=-=-= */
+
+.instruction .para{
+  margin: 80px 15% 45px;
+  text-align: center;
+}
+
+.instruction .title .box {
+  min-width: fit-content;
+  padding: 1px 60px;
+  height: 80px;
+  width: 100%;
+}
+
+.instruction .title .box span{
+  font-size: 40px;
+  line-height: 0px;
+}
+
+.instruction .howTo{
+  height: 50px;
+  padding: 4px;
+}
+
+.instruction .howTo .fa-arrow-left{
+  font-size: 40px;
+}
+
+/* =-=-=- CHANGES BY AALIYA  -=-=-= */
 
 .modes {
   -webkit-box-pack: space-evenly;
