Revert "Added instruction page"
This reverts commit e21a3d21585845a2c4e370ef1e7419644889859a, reversing
changes made to 456ca6b3e1c186f12a13e8ab5064854689d70614.

--- a/doge/style/main.css
+++ b/doge/style/main.css
@@ -2,15 +2,15 @@
 html, body {
   margin: 0;
   padding: 0;
-  background:#1e2641;
+  background: #fff;
   color: #000;
 /*  font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;*/
   font-family: 'Comic Sans', 'Comic Sans', Chalkboard, Helvetica, Arial, sans-serif;
   font-size: 18px; 
-  /* -webkit-animation: background-gradient-change linear 6s infinite alternate;
+  -webkit-animation: background-gradient-change linear 6s infinite alternate;
   -moz-animation: background-gradient-change linear 6s infinite alternate;
-  -moz-animation: background-gradient-change linear 6s infinite alternate; } */
-}
+  -moz-animation: background-gradient-change linear 6s infinite alternate; }
+
 body {
   margin: 80px 0 0 0; }
 
@@ -20,7 +20,7 @@ body {
   clear: both; }
 
 h1.title {
-  color:#ff9900;
+  color:#333;
   font-size: 48px;
   font-weight: bold;
   margin: 0;
@@ -173,7 +173,6 @@ h1.title {
     
 
   .info-container {
-    display: none;
     position: relative;
     cursor:pointer;
     left:50%;
@@ -208,7 +207,7 @@ h1.title {
   }
     
   .info-container, .hide-info {
-    background: #ff9900;
+    background: #f0f;
     padding: 10px 15px;
     height: 10px;
     line-height: 10px;
@@ -249,7 +248,7 @@ h1.title {
       
       
   .key-container, .hide-key {
-    background: #ff9900;
+    background: #f0f;
     padding: 10px 15px;
     height: 10px;
     line-height: 10px;
@@ -290,7 +289,7 @@ h1.title {
 .score-container, .best-container {
   position: relative;
   display: inline-block;
-  background: #ff9900;
+  background: #f0f;
   padding: 15px 25px;
 /*  font-size: 25px;*/
   height: 25px;
@@ -309,7 +308,7 @@ h1.title {
     font-size: 12px;
     line-height: 13px;
     text-align: center;
-    color: #1e2641; }
+    color: #000; }
   .score-container .score-addition, .best-container .score-addition {
     position: absolute;
     right: 30px;
@@ -329,9 +328,7 @@ h1.title {
 
 .best-container:after {
   content: "Best"; }
-.best-container{
-  display: none;
-}
+
 p {
   margin-top: 0;
   margin-bottom: 10px;
@@ -1046,9 +1043,3 @@ hr {
   .game-message .lower {
     margin-top: 30px !important; } }
     
-.scores-container{
-  position: fixed;
-  top:10px;
-  right:10px;
-  margin: 10px 10px;
-}
